# raspi-serial-test

./: .goreleaser.yaml  BUILD.bazel  README.md  WORKSPACE  deps.bzl  go.mod  go.sum  receiver  transmitter
.github/workflows/: release.yaml
cmd/receiver/: BUILD.bazel  main.go
cmd/transmitter/: BUILD.bazel  main.go
internal/receiver/: BUILD.bazel  receive.go
internal/transmitter/: BUILD.bazel  transmit.go
pkg/piserial/: BUILD.bazel  piserial.go
