load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/rakiyoshi/raspi-serial-test
gazelle(name = "gazelle")

gazelle(
    name = "gazelle_update_repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
    ],
    command = "update-repos",
)
