load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "receiver_lib",
    srcs = ["main.go"],
    importpath = "github.com/rakiyoshi/raspi-serial-test/cmd/receiver",
    visibility = ["//visibility:private"],
    deps = ["//internal/receiver"],
)

go_binary(
    name = "receiver",
    embed = [":receiver_lib"],
    visibility = ["//visibility:public"],
)
