load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "transmitter",
    embed = [":transmitter_lib"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "transmitter_lib",
    srcs = ["main.go"],
    importpath = "github.com/rakiyoshi/raspi-serial-test/cmd/transmitter",
    visibility = ["//visibility:private"],
    deps = ["//internal/transmitter"],
)
