load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "transmitter",
    srcs = ["transmit.go"],
    importpath = "github.com/rakiyoshi/raspi-serial-test/internal/transmitter",
    visibility = ["//:__subpackages__"],
    deps = [
        "//pkg/piserial",
        "@st_bug_go_serial//:go_default_library",
    ],
)
